BusOne01/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>BOT_ACO_IDN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It is created by BusinessOne Technologies. It is a self-lookup and used to store parent IDN Id while creation of IDN Record.</description>
        <label>ACO-IDN</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accountable Care Organizations</relationshipLabel>
        <relationshipName>ACO_IDN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_ACO_Lives_Commercial__c</fullName>
        <description>It is created by BusinessOne Technologies. It is used to store ACO Lives (Commercial)</description>
        <label>Commercial Lives</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_ACO_Lives_Medicare__c</fullName>
        <description>It is created by BusinessOne Technologies. It is used to store ACO Lives (Medicare)</description>
        <label>Medicare Lives</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_ACO_MCO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It is created by BusinessOne Technologies. It is a self-lookup and used to store parent ACO Id on MCO record</description>
        <label>ACO-MCO</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Managed Care Organizations</relationshipLabel>
        <relationshipName>ACO_MCO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_ACO_Type__c</fullName>
        <description>It is created by BusinessOne Technologies. It is used to store ACO Type</description>
        <label>ACO Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Annual_Net_Operating_Revenue__c</fullName>
        <description>It is created by BusinessOne Technologies. It is used to store the Annual Net Operating Revenue of IDN</description>
        <label>Annual Net Operating Revenue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Births__c</fullName>
        <description>It is created by BusinessOne Technologies. It is used to store no of Births</description>
        <label>Births</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Emergency_Care_Visits__c</fullName>
        <description>It is created by BusinessOne Technologies. It is used to store Emergency Care Visits</description>
        <label>Emergency Care Visits</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Entity_Id__c</fullName>
        <description>To store BOT Entity Id. It is used for internal reference, it is unique also using as external Id. It is a hidden field and will not appear in page layout.</description>
        <externalId>true</externalId>
        <label>Entity Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Entity_Level__c</fullName>
        <description>To store the entity level like National / Regional / Local</description>
        <label>Entity Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>State Medicaid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BOT_Group_Purchasing_Organization__c</fullName>
        <description>It is created by BusinessOne Technologies. It is used to store Group Purchasing Organization(GPO)</description>
        <label>Group Purchasing Organization(GPO)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Hospital_IDN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It is created by BusinessOne Technologies. It is a self-lookup and used to store Parent IDN Id while creating a Hospital record</description>
        <label>Hospital-IDN</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Hospitals</relationshipLabel>
        <relationshipName>Hospital_IDN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_Inpatient_Hospital_Admission__c</fullName>
        <description>It is created by BusinessOne Technologies. It is used to store the Inpatient Hospital Admission</description>
        <label>Inpatient Hospital Admission</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It is Created by BusinessOne Technologies. It represents the current status of the plan.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BOT_Is_BOT_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It is created by BusinessOne Technologies. It indicates that record is created by BOT.</description>
        <label>Is BOT Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BOT_Is_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to identify the Account plan as Parent</description>
        <label>Is Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BOT_Licensed_Staffed_Beds__c</fullName>
        <description>It is created by BusinessOne Technologies. It is used to store Licensed/Staffed Beds</description>
        <label>Licensed/Staffed Beds</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Outpatient_Care_Centers__c</fullName>
        <description>It is created by BusinessOne Technologies. It is used to store no of Outpatient Care Centers associated with IDN</description>
        <label>Outpatient Care Centers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Outpatient_Hospital_Admission__c</fullName>
        <description>It is created by BusinessOne Technologies. It is used to store outpatient Hospital Admission</description>
        <label>Outpatient Hospital Admission</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Parent_Entity_ID__c</fullName>
        <description>To store the BOT parent entity ID. It is a hidden filed and used for BOT internal data reference.</description>
        <label>Parent Entity  ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Plan_Lives__c</fullName>
        <description>This field is created by BusinessOne Technologies. It is used to store the total lives covered under this plan. These lives are calculated from Benefit design lives through a trigger.</description>
        <label>Plan Lives Rx</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Suffix1__c</fullName>
        <label>Suffix1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Total_No_of_Employees__c</fullName>
        <description>It is created by BusinessOne Technologies. It is used to store total no of employees associated with IDN</description>
        <label>Total # of Employees</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Total_No_of_Hospitals__c</fullName>
        <description>It is created by BusinessOne Technologies. It is used to store total no of Hospitals comes under IDN</description>
        <label>Total # of Hospitals</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Total_No_of_Physicians__c</fullName>
        <description>It is created by BusinessOne Technologies. It is used to store total no of Physicians associated with IDN</description>
        <label>Total # of Physicians</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>BOT_ACO</fullName>
        <active>true</active>
        <description>(BOT) To store ACO&apos;s.</description>
        <label>BOT ACO</label>
    </recordTypes>
    <recordTypes>
        <fullName>BOT_Commercial</fullName>
        <active>true</active>
        <description>(BOT) To store commercial plans.</description>
        <label>BOT Commercial</label>
    </recordTypes>
    <recordTypes>
        <fullName>BOT_Employer</fullName>
        <active>true</active>
        <description>(BOT) To store Employer plans.</description>
        <label>BOT Employer</label>
    </recordTypes>
    <recordTypes>
        <fullName>BOT_Hospital</fullName>
        <active>true</active>
        <description>(BOT) For Hospital view</description>
        <label>BOT Hospital</label>
    </recordTypes>
    <recordTypes>
        <fullName>BOT_IDN</fullName>
        <active>true</active>
        <description>(BOT) To store IDN&apos;s.</description>
        <label>BOT IDN</label>
    </recordTypes>
    <recordTypes>
        <fullName>BOT_PBM</fullName>
        <active>true</active>
        <description>(BOT) To store PBM plans.</description>
        <label>BOT PBM</label>
    </recordTypes>
    <recordTypes>
        <fullName>BOT_Specialty_Provider</fullName>
        <active>true</active>
        <description>(BOT) To store Specialty Providers.</description>
        <label>BOT Specialty Provider</label>
    </recordTypes>
    <recordTypes>
        <fullName>BOT_State_Medicaid</fullName>
        <active>true</active>
        <description>(BOT) To store State Medicaid plans.</description>
        <label>BOT State Medicaid</label>
    </recordTypes>
    <recordTypes>
        <fullName>BOT_Tricare</fullName>
        <active>true</active>
        <description>(BOT) To store Tricare plans.</description>
        <label>BOT Tricare</label>
    </recordTypes>
    <recordTypes>
        <fullName>BOT_VA</fullName>
        <active>true</active>
        <description>(BOT) To store VA plans.</description>
        <label>BOT VA</label>
    </recordTypes>
</CustomObject>